--- a/src/biz/t73/tpi/config/ConfigurePanel.form
+++ b/src/biz/t73/tpi/config/ConfigurePanel.form
@@ -60,7 +60,7 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Test"/>
+          <text value="_Test"/>
         </properties>
       </component>
       <component id="e5f18" class="javax.swing.JTextField" binding="configUrl">
